enable OpenJDK 11 support

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,7 +23,7 @@
  */
 
 dependencies {
-    compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx
+    compile group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: versionFontawesomefx
     compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':tweetwallfx-tweet-api')
     compile project(':tweetwallfx-configuration')
