--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ ext {
         ('false' != System.getenv('TRAVIS_PULL_REQUEST')) &&
         null != findProperty('BINTRAY_USER') &&
         null != findProperty('BINTRAY_KEY')
+    preJDK11 = System.getProperty('java.version').startsWith('1.8.')
     javaFxPlatform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 }
 
@@ -131,6 +132,7 @@ allprojects {
 
         javadoc {
             doFirst {
+                if (preJDK11) return
                 def additionalModules = (configurations.javafx + configurations.jaxb)
                 options.addStringOption('-module-path', additionalModules.asPath)
                 options.addStringOption('-add-modules', 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml')
@@ -139,6 +141,7 @@ allprojects {
 
         compileJava {
             doFirst {
+                if (preJDK11) return
                 def additionalModules = (configurations.javafx + configurations.jaxb)
                 options.compilerArgs = [
                         '--module-path', additionalModules.asPath,
@@ -149,8 +152,8 @@ allprojects {
         }
 
         tasks.withType(JavaExec) {
+            if (preJDK11) return
             def additionalModules = (configurations.javafx + configurations.jaxb)
-            jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
             jvmArgs '--module-path'
             jvmArgs additionalModules.asPath
             jvmArgs '--add-modules'
