Added filterstep checking images in tweets with Google Vision API. fixes TweetWallFX/TweetwallFX#703

--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,7 @@ versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
 versionFontawesomefx=8.9
+versionGoogleVision=1.52.0
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
