--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,8 @@ versionCacheApi=1.1.0
 versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
-versionFontawesomefx=4.7.0-9.1.2
+versionFontawesomefx9=4.7.0-9.1.2
+versionFontawesomefx8=8.9
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
