--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@
 # THE SOFTWARE.
 #
 
-currentVersion=1.0.2
+currentVersion=1.0.3
 
 # properties configuring build
 executeCFPClientLiveTests=false
@@ -34,6 +34,7 @@ versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
 versionFontawesomefx=8.9
+versionGoogleVision=1.52.0
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
