--- a/gradle.properties
+++ b/gradle.properties
@@ -33,23 +33,28 @@ versionCacheApi=1.1.0
 versionEHCache=3.6.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
-versionFontawesomefx=8.9
+versionFontawesomefx8=8.9
+versionFontawesomefx9=4.7.0-9.1.2
 versionGoogleVision=1.52.0
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.6
 versionGradleInfoPlugin=4.+
 versionGradleVersionsPlugin=0.20.0
 versionGroovy=2.5.2
-versionJGit=5.+
-versionJUnit=4.12
 versionJackson=2.+
+versionJavaActivation=1.2.0
 versionJavaEEAPI=8.0
+versionJavaFx=11.0.1
 versionJavaxJson=1.1.4
 versionJavaxJsonBindAPI=1.0
 versionJavaxWsRsAPI=2.1.1
+versionJaxB=2.3.1
 versionJersey=2.27
+versionJGit=5.+
+versionJUnit=4.12
 versionLog4j=2.11.1
 versionNebulaPublishingPlugin=9.2.0
+versionOsdetectorGradlePlugin=1.6.0
 versionSonarqubeGradlePlugin=2.6.2
 versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=1.6.5
