--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2015-2018 TweetWallFX
+ * Copyright 2015-2019 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -65,7 +65,7 @@ ext {
 allprojects {
     group = 'org.tweetwallfx'
     version = currentVersion
-    description = 'JavaFX based Tweetwall'
+    description = 'JavaFX based Tweetwall (' + name + ')'
 
     repositories {
         jcenter()
