Upgraded version of gradle-info-plugin dependencies to 5.0.3. (#743)
fixes TweetWallFX/TweetwallFX#741

--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ versionFontawesomefx9=4.7.0-9.1.2
 versionGoogleVision=1.52.0
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.8
-versionGradleInfoPlugin=4.+
+versionGradleInfoPlugin=5.0.3
 versionGradleVersionsPlugin=0.21.0
 versionGroovy=2.5.2
 versionJackson=2.+
