Upgraded version of jaxb dependencies to 2.4.0-b180830.0359. fixes TweetWallFX/TweetwallFX#749

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ versionJavaFx=11.0.1
 versionJavaxJson=1.1.4
 versionJavaxJsonBindAPI=1.0
 versionJavaxWsRsAPI=2.1.1
-versionJaxB=2.3.1
+versionJaxB=2.4.0-b180830.0359
 versionJersey=2.28
 versionJGit=5.+
 versionJUnit=4.12
