--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 /*
- * The MIT License
+ * The MIT License (MIT)
  *
- * Copyright 2015-2018 TweetWallFX
+ * Copyright (c) 2015-2019 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,10 +23,10 @@
  */
 
 dependencies {
-    if (preJDK11) {
-        compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx8
-    } else {
+    if (JavaVersion.current().isJava9Compatible()) {
         compile group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: versionFontawesomefx9
+    } else {
+        compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx8
     }
     compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':tweetwallfx-tweet-api')
