--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
-# The MIT License
+# The MIT License (MIT)
 #
-# Copyright 2017-2019 TweetWallFX
+# Copyright (c) 2017-2019 TweetWallFX
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -35,6 +35,7 @@ versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
 versionFontawesomefx8=8.9
 versionFontawesomefx9=4.7.0-9.1.2
+versionFontawesomefx11=4.7.0-11
 versionGoogleVision=1.71.0
 versionGradleBintrayPlugin=1.8.4
 versionGradleErrorpronePlugin=0.8
