--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 #
-# The MIT License
+# The MIT License (MIT)
 #
-# Copyright 2017-2019 TweetWallFX
+# Copyright (c) 2017-2019 TweetWallFX
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
@@ -32,7 +32,7 @@ versionAssertJ=3.+
 versionCacheApi=1.1.0
 versionEHCache=3.7.1
 versionEmojiJava=4.0.0
-versionErrorProneCore=2.3.2
+versionErrorProneCore=2.3.3
 versionFontawesomefx8=8.9
 versionFontawesomefx9=4.7.0-9.1.2
 versionGoogleVision=1.71.0
