In case of JDK11 or later add JavaFX files to the classpath of the spotbugs task. fixes TweetWallFX/TweetwallFX#773

--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,12 @@ allprojects {
                 xml.enabled = false
                 html.enabled = true
             }
+
+            if (JavaVersion.current().isJava11Compatible()) {
+                afterEvaluate {
+                    classpath = (classpath + configurations.javafx)
+                }
+            }
         }
 
         // configuring Versions plugin
