--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
-dist: xenial
 language: java
-jdk:
-  - oraclejdk8
-  - openjdk11
-  - openjdk12
+
+matrix:
+  include:
+    - dist: trusty
+      jdk: oraclejdk8
+    - dist: xenial
+      jdk: openjdk11
+    - dist: xenial
+      jdk: openjdk12
+
 #addons:
 #  apt:
 #    packages:
