For Java11 Compatible JDKs configure Test tasks to add javafx modules. (#768)
Configure Java11 JavaFX Modules after the project has been evaluated instead of just prior to the tasks execution.
Use Gradle public API way of determining the Java Compatibility
fixes TweetWallFX/TweetwallFX#767

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,10 +23,10 @@
  */
 
 dependencies {
-    if (preJDK11) {
-        compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx8
-    } else {
+    if (JavaVersion.current().isJava9Compatible()) {
         compile group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: versionFontawesomefx9
+    } else {
+        compile group: 'de.jensd', name: 'fontawesomefx', version: versionFontawesomefx8
     }
     compile group: 'com.vdurmont', name: 'emoji-java', version: versionEmojiJava
     compile project(':tweetwallfx-tweet-api')
