--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,15 @@ buildscript {
         classpath group: 'com.netflix.nebula', name: 'gradle-info-plugin', version: versionGradleInfoPlugin
         classpath group: 'com.netflix.nebula', name: 'nebula-publishing-plugin', version: versionNebulaPublishingPlugin
         classpath group: 'gradle.plugin.com.github.spotbugs', name: 'spotbugs-gradle-plugin', version: versionSpotbugs
-        classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin
+
+        if (JavaVersion.current().isJava11Compatible()) {
+            classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin4Java11AndLater
+        } else if (JavaVersion.current().isJava8Compatible()) {
+            classpath group: 'net.ltgt.gradle', name: 'gradle-errorprone-plugin', version: versionGradleErrorpronePlugin4Java8AndLater
+        } else {
+            throw new GradleException("Building with Java major version prior to 8 is not supported.")
+        }
+
         // VCS dependency required by plugin 'gradle-info-plugin'
         classpath group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: versionJGit
         classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: versionSonarqubeGradlePlugin
@@ -191,7 +199,13 @@ allprojects {
         apply plugin: 'net.ltgt.errorprone'
 
         dependencies {
-            errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: versionErrorProneCore
+            if (JavaVersion.current().isJava11Compatible()) {
+                errorprone group: 'com.google.errorprone', name: 'error_prone_core', version: versionErrorProneCore
+            } else if (JavaVersion.current().isJava8Compatible()) {
+                errorproneJavac group: 'com.google.errorprone', name: 'error_prone_core', version: versionErrorProneCore
+            } else {
+                throw new GradleException("Building with Java major version prior to 8 is not supported.")
+            }
         }
 
         // configuring Spotbugs
