--- a/gradle.properties
+++ b/gradle.properties
@@ -33,6 +33,9 @@ versionCacheApi=1.1.0
 versionEHCache=3.7.1
 versionEmojiJava=4.0.0
 versionErrorProneCore=2.3.2
+versionFontawesomeCommons9=9.1.2
+versionFontawesomeCommons11=11.0
+versionFontawesomefx11=4.7.0-11
 versionFontawesomefx8=8.9
 versionFontawesomefx9=4.7.0-9.1.2
 versionGoogleVision=1.72.0
