Corrected line endings to LF from CRLF. (#790)
* Corrected line endings to LF from CRLF.
fixes TweetWallFX/TweetwallFX#789

* Add spotless check to ensure this from now on.

* And let indentation happen with four space characters.

--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,16 @@ allprojects {
             indentWithSpaces(4)
             endWithNewline()
         }
+        format 'javaFiles', {
+            target fileTree(project.rootDir) {
+                include '**/*.java'
+                include '**/*.groovy'
+            }
+
+//            trimTrailingWhitespace()
+            indentWithSpaces(4)
+            endWithNewline()
+        }
     }
 
     afterEvaluate {
