--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ allprojects {
                 include '**/*.groovy'
             }
 
-//            trimTrailingWhitespace()
+            trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
         }
