Added spotless rule to reduce multiple (i.e. >=2) empty lines into one single empty line

--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ allprojects {
 //            trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
+            custom('noMultipleEmptyLines', {fileContent -> fileContent.replaceAll('\n{3,}', '\n\n')})
         }
     }
 
