--- a/build.gradle
+++ b/build.gradle
@@ -109,6 +109,7 @@ allprojects {
 //            trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
+            custom('noEmptyLineBeforeClosingBrace', {fileContent -> fileContent.replaceAll(/\n+(\n *[\}])/, '$1')})
         }
     }
 
