Activated check for trailing whitespaces anc corrected formatting of java files with trailing whitespaces (#792)
* activated check for trailing whitespaces.

* Corrected formatting of java files with trailing whitespaces.
fixes TweetWallFX/TweetwallFX#791

--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ allprojects {
                 include '**/*.groovy'
             }
 
-//            trimTrailingWhitespace()
+            trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
         }
