Added spotless rule to remove empty lines before closing braces (#794)
* Added spotless rule to remove empty lines before closing braces

* changed order of custom rule application

* fixing spotless failures.

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ allprojects {
             indentWithSpaces(4)
             endWithNewline()
             custom('noMultipleEmptyLines', {fileContent -> fileContent.replaceAll('\n{3,}', '\n\n')})
+            custom('noEmptyLineBeforeClosingBrace', {fileContent -> fileContent.replaceAll(/\n+(\n *[\}])/, '$1')})
         }
     }
 
