--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,10 @@ language: java
 
 matrix:
   include:
-    - dist: trusty
-      jdk: oraclejdk8
     - dist: xenial
       jdk: openjdk11
     - dist: xenial
       jdk: openjdk12
+    - dist: xenial
+      jdk: openjdk13
 
-#addons:
-#  apt:
-#    packages:
-#      - oracle-java8-installer
