--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: java
 
 matrix:
   include:
-    - dist: trusty
-      jdk: oraclejdk8
     - dist: xenial
       jdk: openjdk11
+    - dist: xenial
+      jdk: openjdk12
 #    - dist: xenial
-#      jdk: openjdk12
+#      jdk: openjdk13
+
