Added spotless rule ensuring star imports are not allowed. Updated classes where this rule was violated.
fixes TweetWallFX/TweetwallFX#922

--- a/build.gradle
+++ b/build.gradle
@@ -104,9 +104,11 @@ allprojects {
                 include '**/*.groovy'
             }
 
+            paddedCell()
             trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
+            custom('noStarImports', {fileContent -> fileContent.replaceAll(/\nimport (static )?[a-zA-Z0-9.]*[.][\*];\n/, '\n')})
             custom('noMultipleEmptyLines', {fileContent -> fileContent.replaceAll('\n{3,}', '\n\n')})
             custom('noEmptyLineBeforeClosingBrace', {fileContent -> fileContent.replaceAll(/\n+(\n *[\}])/, '$1')})
         }
