--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ allprojects {
                 include '**/*.asciidoc'
                 include '**/*.adoc'
                 include '**/*.asc'
+                include '**/*.css'
                 include '**/*.json'
                 include '**/*.md'
                 include '**/*.properties'
