--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@
 # THE SOFTWARE.
 #
 
-currentVersion=2.0-SNAPSHOT
+currentVersion=1.1.3
 
 # properties configuring build
 executeCFPClientLiveTests=false
