--- a/build.gradle
+++ b/build.gradle
@@ -86,6 +86,7 @@ allprojects {
                 include '**/*.asciidoc'
                 include '**/*.adoc'
                 include '**/*.asc'
+                include '**/*.css'
                 include '**/*.json'
                 include '**/*.md'
                 include '**/*.properties'
@@ -104,9 +105,11 @@ allprojects {
                 include '**/*.groovy'
             }
 
+            paddedCell()
             trimTrailingWhitespace()
             indentWithSpaces(4)
             endWithNewline()
+            custom('noStarImports', {fileContent -> fileContent.replaceAll(/\nimport (static )?[a-zA-Z0-9.]*[.][\*];\n/, '\n')})
             custom('noMultipleEmptyLines', {fileContent -> fileContent.replaceAll('\n{3,}', '\n\n')})
             custom('noEmptyLineBeforeClosingBrace', {fileContent -> fileContent.replaceAll(/\n+(\n *[\}])/, '$1')})
         }
