--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ matrix:
       jdk: openjdk11
     - dist: xenial
       jdk: openjdk12
-#    - dist: xenial
-#      jdk: openjdk13
+    - dist: xenial
+      jdk: openjdk13
 
