--- a/gradle.properties
+++ b/gradle.properties
@@ -28,6 +28,7 @@ currentVersion=2.0-SNAPSHOT
 executeCFPClientLiveTests=false
 
 # artifact versions
+versionAsm=7.2
 versionAssertJ=3.+
 versionCacheApi=1.1.1
 versionEHCache=3.8.1
