Updates Gradle to 6.3 and a lot of libraries

--- a/build.gradle
+++ b/build.gradle
@@ -147,9 +147,10 @@ allprojects {
             javafx group: 'org.openjfx', name: 'javafx-graphics', version: versionJavaFx, classifier: javaFxPlatform
             javafx group: 'org.openjfx', name: 'javafx-fxml', version: versionJavaFx, classifier: javaFxPlatform
             javafx group: 'org.openjfx', name: 'javafx-controls', version: versionJavaFx, classifier: javaFxPlatform
-            jaxb group: 'com.sun.activation', name: 'javax.activation', version: versionJavaActivation
-            jaxb group: 'javax.xml.bind', name: 'jaxb-api', version: versionJaxB
-            jaxb group: 'com.sun.xml.bind', name: 'jaxb-impl', version: versionJaxB
+            jaxb group: 'jakarta.activation', name: 'jakarta.activation-api', version: versionJavaActivation
+            jaxb group: 'com.sun.activation', name: 'jakarta.activation', version: versionJavaActivation
+            jaxb group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: versionJaxB
+            jaxb group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: versionJaxBruntime
             testCompile group: 'junit', name: 'junit', version: versionJUnit
             testCompile group: 'org.assertj', name: 'assertj-core', version: versionAssertJ
         }
@@ -163,7 +164,7 @@ allprojects {
                 afterEvaluate {
                     def additionalModules = (configurations.javafx + configurations.jaxb)
                     options.addStringOption('-module-path', additionalModules.asPath)
-                    options.addStringOption('-add-modules', 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml')
+                    options.addStringOption('-add-modules', 'jakarta.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml')
                 }
             }
         }
@@ -182,7 +183,7 @@ allprojects {
                             '--module-path',
                             additionalModules.asPath,
                             '--add-modules',
-                            'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml',
+                            'jakarta.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml',
                     ])
                 }
             }
@@ -195,7 +196,7 @@ allprojects {
                     jvmArgs '--module-path'
                     jvmArgs additionalModules.asPath
                     jvmArgs '--add-modules'
-                    jvmArgs 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml'
+                    jvmArgs 'jakarta.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml'
                 }
             }
         }
@@ -207,7 +208,7 @@ allprojects {
                     jvmArgs '--module-path'
                     jvmArgs additionalModules.asPath
                     jvmArgs '--add-modules'
-                    jvmArgs 'java.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml'
+                    jvmArgs 'jakarta.activation,java.xml.bind,javafx.controls,javafx.graphics,javafx.fxml'
                 }
             }
         }
@@ -254,13 +255,15 @@ allprojects {
         }
 
         // configuring Versions plugin
-        dependencyUpdates {
-            revision = 'release'
-
-            rejectVersionIf { /*ComponentSelection*/ selection ->
-                // version is a non-release version?
-                return ['alpha', 'beta', 'rc', 'cr', 'm', 'ea'].any{qualifier ->
-                     selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*.*/
+        dependencyUpdates.resolutionStrategy {
+            componentSelection { rules ->
+                rules.all { ComponentSelection selection ->
+                    boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'pr', 'ea'].any { qualifier ->
+                        selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-+]*/
+                    }
+                    if (rejected) {
+                        selection.reject('Release candidate')
+                    }
                 }
             }
         }
