--- a/gradle.properties
+++ b/gradle.properties
@@ -36,27 +36,28 @@ versionEmojiJava=5.1.1
 versionErrorProneCore=2.3.3
 versionFontawesomeCommons11=11.0
 versionFontawesomefx11=4.7.0-11
-versionGoogleVision=1.99.1
-versionGradleBintrayPlugin=1.8.4
+versionGoogleVision=1.99.3
+versionGradleBintrayPlugin=1.8.5
 versionGradleErrorpronePlugin4Java11AndLater=1.1.1
-versionGradleInfoPlugin=5.2.0
-versionGradleVersionsPlugin=0.27.0
+versionGradleInfoPlugin=7.1.3
+versionGradleVersionsPlugin=0.28.0
 versionGroovy=2.5.2
-versionJavaActivation=1.2.0
+versionJavaActivation=1.2.2
 versionJavaFx=13.0.2
 versionJavaxJson=1.1.4
 versionJavaxJsonBindAPI=1.0
 versionJavaxWsRsAPI=2.1.1
-versionJaxB=2.4.0-b+
-versionJersey=2.29.1
-versionJGit=5.+
-versionJUnit=4.12
-versionLog4j=2.13.0
-versionNebulaPublishingPlugin=14.1.1
+versionJaxB=2.3.3
+versionJaxBruntime=2.3.2
+versionJersey=2.30.1
+versionJGit=5.7.0.202003110725-r
+versionJUnit=4.13
+versionLog4j=2.13.1
+versionNebulaPublishingPlugin=17.2.1
 versionOsdetectorGradlePlugin=1.6.2
-versionSonarqubeGradlePlugin=2.8
+versionSonarqubeGradlePlugin=2.8.0.1969
 versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=2.0.0
-versionSpotless=3.25.0
+versionSpotless=3.28.1
 versionTwitter4j=4.0.7
-versionYasson=1.0.5
+versionYasson=1.0.6
