--- a/stepengine-steps/build.gradle
+++ b/stepengine-steps/build.gradle
@@ -23,5 +23,5 @@
  */
 
 dependencies {
-    compile project(':tweetwallfx-stepengine-dataproviders')
+    implementation project(':tweetwallfx-stepengine-dataproviders')
 }
