--- a/tweet-stepengine/build.gradle
+++ b/tweet-stepengine/build.gradle
@@ -22,6 +22,6 @@
  * THE SOFTWARE.
  */
 dependencies {
-    compile project(':tweetwallfx-controls')
-    compile project(':tweetwallfx-tweet-api')
+    implementation project(':tweetwallfx-controls')
+    implementation project(':tweetwallfx-tweet-api')
 }
