--- a/gradle.properties
+++ b/gradle.properties
@@ -36,28 +36,30 @@ versionEmojiJava=5.1.1
 versionErrorProneCore=2.11.0
 versionFontawesomeCommons11=11.0
 versionFontawesomefx11=4.7.0-11
-versionGoogleVision=2.0.18
+versionGoogleAuth=1.5.3
+versionGoogleVision=2.0.21
 versionGradleBintrayPlugin=1.8.5
 versionGradleErrorpronePlugin4Java11AndLater=2.0.2
-versionGradleInfoPlugin=11.1.0
-versionGradleVersionsPlugin=0.41.0
+versionGradleInfoPlugin=11.3.3
+versionGradleVersionsPlugin=0.42.0
 versionGroovy=2.5.2
-versionJavaActivation=2.0.1
+versionJavaActivation=1.0.0
+versionJavaActivationApi=2.1.0
 versionJavaFx=17.0.2
 versionJavaxJson=1.1.4
 versionJavaxJsonBindAPI=1.0
-versionJavaxWsRsAPI=2.1.1
+versionJavaxWsRsAPI=3.0.0
 versionJaxB=3.0.1
 versionJaxBruntime=3.0.2
-versionJersey=3.0.3
-versionJGit=6.0.0.202111291000-r
+versionJersey=3.0.4
+versionJGit=6.1.0.202203080745-r
 versionJUnit=4.13.2
-versionLog4j=2.17.1
-versionNebulaPublishingPlugin=18.2.0
+versionLog4j=2.17.2
+versionNebulaPublishingPlugin=18.4.0
 versionOsdetectorGradlePlugin=1.7.0
 versionSonarqubeGradlePlugin=3.3
 versionSpockFramework=1.2-groovy-2.5
 versionSpotbugs=2.0.0
-versionSpotless=6.2.0
+versionSpotless=6.3.0
 versionTwitter4j=4.0.7
 versionYasson=2.0.4
