--- a/2d/build.gradle
+++ b/2d/build.gradle
@@ -24,5 +24,7 @@
 
 dependencies {
     implementation project(':tweetwallfx-core')
+    implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
 }
