--- a/generic2d/build.gradle
+++ b/generic2d/build.gradle
@@ -24,5 +24,9 @@
 
 dependencies {
     implementation project(':tweetwallfx-2d')
+    implementation project(':tweetwallfx-core')
+    implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
+    implementation project(':tweetwallfx-tweet-api')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: versionLog4j
 }
