--- a/google-cloud/build.gradle
+++ b/google-cloud/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation project(':tweetwallfx-tweet-api')
     implementation project(':tweetwallfx-filterchain')
+    implementation group: 'com.google.auth', name: 'google-auth-library-oauth2-http', version: versionGoogleAuth
     implementation group: 'com.google.cloud', name: 'google-cloud-vision', version: versionGoogleVision
     implementation group: 'org.ehcache', name: 'ehcache', version: versionEHCache
 }
