--- a/tweet-stepengine/build.gradle
+++ b/tweet-stepengine/build.gradle
@@ -22,6 +22,10 @@
  * THE SOFTWARE.
  */
 dependencies {
+    implementation project(':tweetwallfx-configuration')
     implementation project(':tweetwallfx-controls')
+    implementation project(':tweetwallfx-stepengine-api')
+    implementation project(':tweetwallfx-stepengine-dataproviders')
     implementation project(':tweetwallfx-tweet-api')
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: versionLog4j
 }
