--- a/.github/workflows/gradleBuild.yml
+++ b/.github/workflows/gradleBuild.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Gradle Build
 
 on:
   push:
@@ -62,31 +62,3 @@ jobs:
         uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
         with:
           arguments: --no-daemon --info check
-
-  checkUpdates:
-    name: Check for available updates
-    runs-on: ubuntu-latest
-    
-    steps:
-      # Check out sources
-      - name: Fetch Sources
-        uses: actions/checkout@v2.4.0
-
-      # Validate wrapper
-      - name: Gradle Wrapper Validation
-        uses: gradle/wrapper-validation-action@v1.0.4
-
-      # Setup JDK environment for the next steps
-      - name: Setup JDK 11
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-          cache: gradle
-
-      # Run dependencyUpdates task
-      - name: Run dependencyUpdates task
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-        with:
-          arguments: --no-daemon --refresh-dependencies dependencyUpdates
-      
