--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 /*
  * The MIT License (MIT)
  *
- * Copyright (c) 2015-2019 TweetWallFX
+ * Copyright (c) 2015-2022 TweetWallFX
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -130,7 +130,7 @@ allprojects {
     // now configuring for projects that coontain code not just structuring the project
     if (childProjects.isEmpty()) {
         // configuring standard java project
-        apply plugin: 'java'
+        apply plugin: 'java-library'
         apply plugin: 'idea'
         apply plugin: 'jacoco'
         apply plugin: 'eclipse'
